# oatpp-boilerplate

./: CMakeLists.txt  inject-cmake-lib.ejs.t  readme.md
_templates/controller/new/: controller.ejs.t  inject-include.ejs.t  inject-pointer.ejs.t
_templates/dto/new/: dto.ejs.t  inject-cmake-lib.ejs.t  inject-include.ejs.t
src/: AppComponent.hpp  main.cpp
src/controllers/: AppController.hpp  Controllers.hpp
src/dto/: DTOs.hpp  HelloDTO.hpp
